--- a/projects/default/card.css
+++ b/projects/default/card.css
@@ -7,17 +7,32 @@
   margin: 0;
   width: 100%;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #9e9e9e;
   background-color: white;
   color: #3a3a3a;
   border-radius: 5px;
   overflow: hidden;
+  box-sizing: border-box;
+}
+.card-form input:focus {
+  outline: 0;
+  border-color: #2196f3;
+}
+.card-form input.is-error {
+  border-color: #f44336;
+}
+.card-form .error {
+  float: left;
+  margin-top: 5px;
+  color: red;
+  display: block;
+  font-size: 12px;
 }
 .card-form input::placeholder {
   color: #666;
 }
 .card-form, .card-form input {
-  font: normal 14px/140% 'Helvetica', Arial, sans-serif;
+  font: normal 14px/140% Helvetica, Arial, sans-serif;
 }
 .card-form-row-pan {
   margin-bottom: 30px;
@@ -50,4 +65,7 @@
 }
 .card-form-cvv input {
   width: 80px;
+}
+.card-form-cvv .error {
+  float: right;
 }
