--- a/server/views/card.ejs
+++ b/server/views/card.ejs
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#fff">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.10.0/validate.min.js"></script>
+  <script src="/vendor/vanilla-text-mask/dist/vanillaTextMask.js"></script>
 </head>
 <body>
   <style type="text/css">
