--- a/server/views/card.ejs
+++ b/server/views/card.ejs
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <meta name="theme-color" content="#fff">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.10.0/validate.min.js"></script>
-  <script src="/vendor/vanilla-text-mask/dist/vanillaTextMask.js"></script>
 </head>
 <body>
   <style type="text/css">
@@ -17,6 +15,7 @@
   <div id="root">
     <%- html %>
   </div>
+  <script src="/public/nebo15-mask.js"></script>
   <script src="/public/card.js"></script>
   <script>
     new CardForm(document.getElementById('root'));
