--- a/server/views/card.ejs
+++ b/server/views/card.ejs
@@ -14,6 +14,6 @@
   <div id="root">
     <%- html %>
   </div>
-  <script src="/public/card.js"></script>
+  <script src="/dist/card.js"></script>
 </body>
 </html>
