--- a/server/views/card.ejs
+++ b/server/views/card.ejs
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
   <meta name="theme-color" content="#fff">
+  <script>
+    window.LANGPACK = "<%- langpack %>";
+  </script>
 </head>
 <body>
   <style type="text/css">
