Fix configuration settings

--- a/server/views/card.ejs
+++ b/server/views/card.ejs
@@ -9,6 +9,9 @@
   <script>
     window.LANGPACK = "<%- langpack %>";
   </script>
+  <script>
+    window.__CONFIG__ = "<%- config %>";
+  </script>
 </head>
 <body>
   <style type="text/css">
